@@ -197,7 +197,6 @@ CONFIG_STM32_PHYSR_100FD=0x8000
 CONFIG_STM32_RMII=y
 CONFIG_STM32_RMII_MCO=y
 # CONFIG_STM32_RMII_EXTCLK is not set
-# CONFIG_STM32_ETHMAC_REGDEBUG is not set
 
 #
 # USB Host Configuration
@@ -367,7 +366,7 @@ CONFIG_ADS7843E_THRESHX=39
 CONFIG_ADS7843E_THRESHY=51
 # CONFIG_INPUT_STMPE811 is not set
 CONFIG_LCD=y
-# CONFIG_LCD_NOGETRUN is not set
+CONFIG_LCD_NOGETRUN=y
 CONFIG_LCD_MAXCONTRAST=1
 CONFIG_LCD_MAXPOWER=1
 # CONFIG_LCD_P14201 is not set
@@ -487,7 +486,7 @@ CONFIG_FAT_MAXFNAME=32
 CONFIG_NX=y
 CONFIG_NX_LCDDRIVER=y
 CONFIG_NX_NPLANES=1
-# CONFIG_NX_WRITEONLY is not set
+CONFIG_NX_WRITEONLY=y
 
 #
 # Supported Pixel Depths
@@ -1075,6 +1074,7 @@ CONFIG_NXWIDGETS_CONTINUE_REPEAT_TIME=200
 CONFIG_NXWIDGETS_DOUBLECLICK_TIME=350
 CONFIG_NXWIDGETS_KBDBUFFER_SIZE=16
 CONFIG_NXWIDGETS_CURSORCONTROL_SIZE=4
+# CONFIG_NXWIDGET_MEMMONITOR is not set
 CONFIG_NXWM=y
 
 #
